2005-04-25    <inge@lysator.liu.se>

	Continue on the CSV import
	* csvimportdialog.{h,cc} (getFirstRowContainHeaders,
	getFirstColContainHeaders): new methods

	Fix bug 101007: Error in labels when reading back saved files.
	* kchart_part.{h,cc} (setAxisDefaults): New method
	(misc methods): call setAxisDefaults.

2005-04-17  Fredrik Edemar  <f_edemar@linux.se>
        * KDChartBarPainter.cpp (KDChartBarPainter): Prevent the arrow to be drawn at the bottom of the lowest bar when dealing with negative numbers in a 3D bar chart. If all bars are <= 0 the bars with value 0 will still have an arrow.
        * kchart_part.cc (KChartPart), kchart_params.cc (KChartParams): Make sure the excess arrow is solid by calling setDrawSolidExcessArrows(true) after a chart has been loaded or created.

2005-04-13  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	CSV import: Disable irrelevant formats
	* csvimportdialog.cc (CSVImportDialog): Disable formats Currency
	and Date.

	Disable "Import Data" if inside KSpread
	* kchart_view.{h,cc} (m_importData): New member
	(KChartView): Disable the KAction if data is unchangeable.

2005-04-10  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	Get a file name for "Import Data" and actually read data.
	(No new strings).
	* kchart_view.cc (importData): Open a file dialog, and read data.
	
	----------------------------------------------------------------

	Start on import data from Comma Separated Values files (CSV)
	(Wish 99995)
	* csvimportdialog.{h,cc}: new files
	* csvimportdialogui.ui: new file
	* Makefile.am: Add files above
	* kchart.rc (File menu): Add Action import_data
	* kchart_view.cc (import_data): new KAction
	(importData): new slot
	

2005-04-07  Fredrik Edemar  <f_edemar@linux.se>

        * kchart_part.cc (KChartPart): Set modified when the chart type is
	changed.

2005-04-10  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	Fix the margins on the pie config page.